# anon_excel

./: .gitignore  license.txt  pyproject.toml  readme.md
src/anon_excel/: __init__.py  __main__.py  anon.py  calc_stats.py  constants.py  ranking_data.py  survey_files.py  transform.py
tests/: test_anon.py  test_calc_stats.py  test_outputname.py  test_survey_files.py  test_transform.py
tests/test_data/: Scoring.xlsx
